src/test/deca/context/valid/class_test_this.deca
//  Description :
// 
//      Test syntaxiquement correct d'une classe et d'un main utilisant this
//  Résultats : 
// 
//      N/A
// 
//  Historique :
// 
//      Créé le 13/06 par gl03

class A {
    int x=3;
    void IncrementX(){
        this.x=this.x+1;
    }

}

{
    A oA = new A();
    print(oA.IncrementX());
}